Final edits from Brill's suggestions

--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -71,7 +71,7 @@
 \vspace{2em}
 \textbf{Short title}: \PIP{} regulates the ciliary TZ
 
-\textbf{Keywords}: Phosphatidylinositol 4,5-bisphosphate, Skittles, Cep290, cilia, transition zone
+\textbf{Keywords}: PtdIns(4,5)P\textsubscript{2}, Skittles, Cep290, cilia, transition zone, basal body
 
 \textbf{Brief summary statement}: The authors show that the membrane phospholipid \PIP{},
 and the kinase that produces \PIP{} called Skittles, are needed for
@@ -82,7 +82,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
 \begin{doublespacing}
   \begin{linenumbers}
     \section*{Abstract}
-    Cilia are sensory organelles that are essential for human development
+    Cilia are cellular antennae that are essential for human development
     and physiology.
     A large number of genetic disorders linked to cilium dysfunction are
     associated with proteins that localize to the ciliary transition zone (TZ),
@@ -103,7 +103,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     These hyperelongated TZs exhibit functional defects,
     including loss of plasma membrane tethering.
     We also report that the \textit{onion rings} (\textit{onr}) allele
-    of Drosophila Exo84
+    of Drosophila \textit{exo84}
     decouples TZ hyperelongation from loss of cilium-plasma membrane tethering.
     Our results reveal a requirement for \PIP{} in supporting ciliogenesis
     by promoting proper TZ maturation.
@@ -139,10 +139,10 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     Ciliogenesis begins with assembly of a nascent TZ at the tip of
     the basal body (BB) \citep{reiter2012base}.
     During TZ maturation, its structure and protein
-    composition change, allowing for
+    constituents change, allowing for
     establishment of a compartmentalized space, bounded by the ciliary membrane
     and the TZ, where assembly of the axoneme, a microtubule-based structure
-    that forms the core of cilia,
+    that forms the ciliary core,
     and signalling can occur.
     In Drosophila, nascent TZs first assemble on BBs
     during early G2 phase in primary spermatocytes \citep{riparbelli2012assembly}.
@@ -161,7 +161,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     We previously showed that the membrane lipid phosphatidylinositol 4,5-bisphosphate
     (\PIP{}) is essential for formation of the axoneme in the Drosophila
     male germline \citep{wei2008depletion, fabian2010phosphatidylinositol}.
-    \PIP{}, one of seven different phosphoinositides (PIPs) present in eukaryotes,
+    \PIP{}, which is one of seven different phosphoinositides (PIPs) present in eukaryotes,
     localizes primarily to the PM, where it is required for
     vesicle trafficking, among
     other processes \citep{balla2013phosphoinositides}.
@@ -174,8 +174,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     which disrupts transport of Hedgehog signalling proteins in vertebrates
     \citep{chavez2015modulation, garcia2015phosphoinositides, conduit2017compartmentalized}
     and ion channels involved in mechanotransduction in Drosophila \citep{park2015ciliary}.
-    In light of the current understanding of the role
-    for \PIP{} as a modulator of cilium function,
+    In light of the current understanding of \PIP{} as a modulator of cilium function,
     we sought to investigate the cause of defects we had observed
     in axoneme assembly in Drosophila male germ cells
     with reduced levels of \PIP{} \citep{wei2008depletion, fabian2010phosphatidylinositol}.
@@ -194,10 +193,10 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     To examine whether axoneme defects in \sigd{}
     \citep{wei2008depletion}
     were caused by aberrant TZ function,
-    we examined localization of fluorescently-tagged
-    centriolar/BB protein
+    we examined localization of fluorescently-tagged versions of the
+    core centriolar/BB protein
     Ana1 (CEP295 homolog) \citep{goshima2007genes, blachon2009proximal}
-    and conserved TZ protein Cep290 \citep{basiri2014migrating}
+    and the conserved TZ protein Cep290 \citep{basiri2014migrating}
     during early steps of cilium assembly.
     Cep290 distribution appeared similar in control and \sigd{} in early G2 phase,
     when TZs are still immature.
@@ -212,7 +211,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     Consistent with this result, the ultrastructure of BBs in \sigd{}
     is normal, and localization of the centriolar
     marker GFP-PACT \citep{basto2006flies}
-    is similar in controls and \sigd{} \citep{wei2008depletion}.
+    is similar, in controls and \sigd{} \citep{wei2008depletion}.
     In contrast, TZ proteins Chibby (Cby) \citep{enjolras2012drosophila} and
     Mks1 \citep{vieillard2016transition, pratt2016drosophila}
     exhibited hyperelongation in \sigd{} (Figure 1E),
@@ -233,14 +232,14 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     % 
     % Results - 2
     % 
-    \subsection*{The type I PIP kinase (PIPKI) Skittles (Sktl) regulates TZ length}
+    \subsection*{The type I PIP kinase Skittles regulates TZ length}
     Although \PIP{} is its major substrate in eukaryotic cells \textit{in vivo}
     \citep{terebiznik2002elimination, zhou2001salmonella, sengupta2013depletion},
     SigD can dephosphorylate multiple PIPs \textit{in vitro}
     \citep{norris1998sopb}.
     To address whether TZ hyperelongation observed in \sigd{} represented a
     physiologically relevant phenotype due to decreased \PIP{},
-    we attempted to rescue it by
+    we attempted to rescue this phenotype by
     co-expressing \sigd{} with
     fluorescently-tagged Skittles (Sktl)
     under control of $\beta$\textsubscript{2}-tubulin promoter.
@@ -252,13 +251,13 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     mutant clones (Figure 2C),
     indicating that Sktl is important for TZ maturation.
 
-    Vertebrate PIPKI$\gamma$ is important for cilium formation in cultured cells
+    Vertebrate type I PIP kinase PIPKI$\gamma$ is important for cilium formation in cultured cells
     \citep{xu2016phosphatidylinositol}.
     The two Drosophila PIPKIs, Sktl and PIP5K59B,
     arose from recent duplication of
     the ancestral PIPKI gene,
     and are not orthologous to specific vertebrate PIPKI isoforms (Figure 2D).
-    Sktl has diverged more than its paralog PIP5K59B, and seems
+    Sktl has diverged more than its paralog PIP5K59B and seems
     to be functionally related to PIPKI$\gamma$
     and the \textit{C. elegans} PPK-1 in having roles at cilia \citep{xu2014pipkigamma}.
     However, unlike the human PIPKI$\gamma$, which licenses TZ assembly
@@ -284,9 +283,9 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     As shown by Unc and Cep290 localization,
     TZs in \sigd{} were frequently incapable of detaching from
     BBs and migrating along axonemes despite
-    axoneme elongation (Figure 1E) and cell elongation
-    (Figures 3A and 3B).
-    The previously reported ``comet-shaped'' Unc-GFP localization in \sigd{}
+    axoneme and cell elongation
+    (Figures 1E, 3A and 3B).
+    Indeed, the previously reported ``comet-shaped'' Unc-GFP localization in \sigd{}
     \citep{wei2008depletion}
     persists during cell elongation after meiosis
     (Figure 3A, bottommost panel)
@@ -299,14 +298,14 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     Consistent with a defect in this barrier and the presence of
     microtubule triplets in axonemes in \sigd{} \citep{wei2008depletion},
     a subset of cilia (<5\%) in \sigd{}
-    contained puncta of the core centriolar protein Ana1 at the distal
+    contained puncta of Ana1 at the distal
     tips of TZs (Figure 3C).
     Treatment of germ cells with the microtubule-stabilizing drug
     Taxol increased the penetrance of this phenotype from <5\% in untreated cells
     to \textgreater25\% in cells treated with 4 $\mu$M Taxol (arrowheads in Figure 3D)
     without significantly affecting Cep290 length (Figure 3E).
     Taxol-treated controls did not exhibit TZ-distal Ana1 puncta ($p$ <0.01 at 5\% penetrance).
-    Fluorescently-tagged pericentriolar protein Asterless (CEP152 homolog)
+    Fluorescently-tagged Asterless (CEP152 homolog), a pericentriolar protein
     \citep{blachon2008drosophila, dzhindzhev2010asterless},
     did not localize to TZ-distal puncta in \sigd{} ($p$ <0.01)
     suggesting that these TZ-distal
@@ -343,23 +342,20 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     the Drosophila male germline \citep{vieillard2016transition}.
     Whereas TZs in \sigd{} and \textit{onr} cells were able to dock
     at the PM initially, they were unable to maintain
-    membrane connections, and were rendered cytoplasmic (Figure 4B and C) similar to TZs in
+    membrane connections, and were rendered cytoplasmic (Figure 4B and C), similar to TZs in
     \textit{dila; cby} mutants.
     We found that fluorescently-tagged Exo70, a \PIP{}-binding exocyst subunit,
     localized to BBs (Figure 4D).
     Our results suggest that the exocyst, and Exo84 in particular, regulates
-    cilium-membrane associations, similar to \PIP{}, and that TZ hyperelongation and loss of
-    membrane-cilium association are genetically separable phenotypes.
+    cilium-PM associations, similar to \PIP{}, and that TZ hyperelongation and loss of
+    cilium-PM association are genetically separable phenotypes.
 
     \section*{Discussion}
-    The process of maturation of a TZ from a nascent form to a fully functional one,
+    The process of maturation of a TZ from a nascent form to a fully functional state,
     leading ultimately to axoneme assembly and ciliary signalling,
     requires orchestration of various proteins and cellular pathways
     \citep{reiter2012base, gonccalves2017ciliary}.
-    In the Drosophila male germline, TZ maturation occurs during the
-    extended G2 phase in mature primary spermatocytes prior to meiosis, and can be readily
-    observed by an increase in TZ length using fluorescence microscopy.
-    Our results suggest that normal execution of this process
+    Our results indicate that normal execution of this process
     requires \PIP{} and that depletion of \PIP{} induces TZs to
     grow longer than normal.
     Similar to \sigd{}, Drosophila \textit{dila; cby} and \textit{cby}
@@ -367,7 +363,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     \citep{enjolras2012drosophila,vieillard2016transition},
     whereas \textit{mks1} mutants have shorter TZs \citep{pratt2016drosophila}.
     Because both Cby and Mks1 are hyperelongated in \sigd{} cells,
-    \PIP{} seems to regulate TZ length independently of an effect on Cby or Mks1 recruitment.
+    \PIP{} regulates TZ length independently of an effect on Cby or Mks1 recruitment.
 
     We also show that hyperelongated TZs are dysfunctional.
     Similar to \textit{dila}; \textit{cby} \citep{vieillard2016transition} and
@@ -376,7 +372,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     with aberrant ultrastructure
     \citep{wei2008depletion}, despite the lack of functional TZs
     or membrane association.
-    The presence of TZ-distal Ana1 puncta in \sigd{} cells, without an increase
+    The presence of TZ-distal Ana1 puncta in \sigd{} cells, without the increase
     in BB length seen in \textit{cep290} mutants lacking a functional TZ barrier,
     suggests that \sigd{} expression selectively disrupts the ability of TZs to restrict C-tubules and
     Ana1 without abolishing the TZ barrier entirely.
@@ -387,8 +383,8 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     Asterless (Asl), a pericentriolar protein
     important for centrosome formation and centriole duplication
     \citep{blachon2008drosophila, dzhindzhev2010asterless}, did not
-    exhibit this TZ-distal localization, possibly due to different dynamics of Ana1 and Asl
-    loading onto centrioles \citep{fu2016conserved, saurya2016drosophila} and the
+    exhibit this TZ-distal localization, possibly due to differences dynamics of Ana1 and Asl
+    loading onto centrioles \citep{fu2016conserved, saurya2016drosophila} or the
     more peripheral nature of Asl within the centriole \citep{blachon2008drosophila}.
 
     The majority of \PIP{} at the PM is produced by PIPKIs
@@ -440,7 +436,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     Drosophila stocks were cultured on cornmeal molasses agar medium at 25$^{\circ}$C
     and 50\% humidity.
     Stocks expressing $\beta$\textsubscript{2}t::\textit{Styp}\textbackslash{SigD} (chromosome \textit{3}) and
-    $\beta$\textsubscript{2}t::YFP-Sktl (chromosome \textit{2}) were described previously \citep{wei2008depletion}.
+    $\beta$\textsubscript{2}t::YFP-Sktl (chromosome \textit{2}) were described previously \citep{wei2008depletion, wong2005pip2}.
     GFP-Exo70 was cloned into the low-level expression vector \textit{tv3} \citep{wong2005pip2}
     and transgenic flies were generated using standard \textit{P} element-mediated transformation.
     Ana1-tdTomato (chromosome \textit{2}) and Cep290-GFP (chromosome \textit{3}) were provided
@@ -456,7 +452,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
 
     \subsection*{Antibodies}
     The following primary antibodies were used for immunofluorescence
-    at the indicated concentrations ---
+    at the indicated concentrations: 
     chicken anti-GFP IgY (abcam), 1:1000;
     rat anti-RFP IgG (5F8, ChromoTek), 1:1000;
     rabbit anti-Centrin (C7736, Sigma-Aldrich), 1:500;
@@ -503,7 +499,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     with secondary antibodies, and three 5-minute washes with PBS.
     Samples were mounted in Dako (Agilent) and imaged with
     a Zeiss Axioplan 2 epifluorescence microscope
-    or Nikon A1R scanning confocal microscope (SickKids imaging facility).
+    or a Nikon A1R scanning confocal microscope (SickKids imaging facility).
 
     \subsection*{Statistical methods}
     Statistical analysis and graphing was performed using R (version 3.4)
@@ -533,7 +529,7 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
 
     \section*{Acknowledgements}
     We are grateful to Brian Ciruna for insightful discussions,
-    B{\'e}n{\'e}dicte Durand for providing (at the time of experiments)
+    B{\'e}n{\'e}dicte Durand, Tomer Avidor-Reiss, Antoine Guichet and Maurice Kernan for providing
     unpublished fly stocks, and to
     B{\'e}n{\'e}dicte Durand and Bill Trimble
     for comments on the manuscript.
@@ -564,21 +560,21 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
     \item Lengths of Ana1-tdTomato versus Cep290-GFP in control and \sigd{} cells at late G2 phase from (C) showing negligible correlation.
       Regression lines are plotted in red, and the Pearson correlation coefficient ($r$) is indicated on the bottom-left.
     \item \sigd{} expression induces hyperelongation of the TZ proteins Chibby (Cby) and Mks1 in late G2 phase (white arrowheads).
-    \item TZ hyperelongation persists through meiosis but does not affect
+    \item TZ hyperelongation persists through meiosis (white arrowhead) but does not affect
       axoneme outgrowth. Acetylated tubulin (AcTub) labels the axoneme.
     \end{enumerate}
     \bigskip
     \textbf{\itshape Figure 2. Sktl is important for transition zone maturation.}
     \begin{enumerate}[label={(\Alph*)}, nolistsep]
     \item Expression of full-length Sktl can suppress \sigd{}-induced TZ hyperelongation in a cilium-autonomous manner.
-      Images were chosen to demonstrate varying levels of rescue of Cep290-GFP length in YFP-Sktl; SigD.
+      Images were chosen to demonstrate varying levels of rescue of Cep290-GFP length in $\beta$\textsubscript{2}t-YFP-Sktl; \sigd{}.
       White arrowheads mark rescued Cep290 distribution for comparison.
     \item Quantification of Cep290 and Ana1 lengths from control, \sigd{} from (A) and $\beta$\textsubscript{2}t-YFP-Sktl; \sigd{} ($n$ = 100).
-    \item \textit{sktl}$^{2.3}$ clones exhibit TZ hyperelongation (white arrowheads). Cilia are marked using
-      Unc-GFP. The plot on the right shows quantification of Unc-GFP lengths in control ($n$ = 53), \textit{sktl}$^{2.3}$ ($n$ = 31) and \sigd{}  ($n$ = 51)
-      spermatocytes at late G2 phase.
+    \item \textit{sktl}$^{2.3}$ clones exhibit TZ hyperelongation (white arrowheads), as marked by
+      Unc-GFP (left). Quantification of Unc-GFP lengths in control ($n$ = 53), \textit{sktl}$^{2.3}$ ($n$ = 31) and \sigd{}  ($n$ = 51)
+      spermatocytes at late G2 phase (right).
     \item Phylogenetic tree of PIP5Ks showing conservation of cilium-associated functions.
-      The scale bar (bottom) represents expected amino acid substitutions per site and branch support values are shown in red (a value of 1 indicates maximum support).
+      Scale bar (bottom) represents expected amino acid substitutions per site. Branch support values are shown in red (a value of 1 indicates maximum support).
       Black arrows represent previous evidence of involvement in cilium-associated functions (from \citep{xu2016phosphatidylinositol}).
       Black arrowhead indicates Sktl.
       Abbreviations: Cele (\textit{Caenorhabditis elegans}), Spur (\textit{Strongylocentrotus purpuratus}), Amel (\textit{Apis mellifera}), Aaeg (\textit{Aedes aegypti}), Dana (\textit{Drosophila ananassae}), Dmel (\textit{Drosophila melanogaster}), Hsap (\textit{Homo sapiens}), Mmus (\textit{Mus musculus}), Xtro (\textit{Xenopus tropicalis}), Cint (\textit{Ciona intestinalis}), Scer (\textit{Saccharomyces cerevisiae}).
@@ -594,20 +590,20 @@ normal ciliary transition zone morphology and function in the Drosophila male ge
       elongating mitochondrial derivative delineated by a yellow dashed line.
     \item Structured illumination micrographs of \sigd{} cells showing TZ-distal puncta of the centriolar protein Ana1 (yellow arrowheads).
     \item Treatment of control and \sigd{} cells with the microtubule stabilizing drug Taxol.
-      Images were chosen to demonstrate the variety in Cep290 distribution.
-      Yellow arrowheads mark TZ-distal Ana1 localization.
+      Images demonstrate the variety in Cep290 distribution.
+      Yellow arrowheads mark TZ-distal Ana1.
     \item Quantification of Cep290 lengths in Taxol-treated control and \sigd{} cells from (D) ($n$ is between 30 and 40).
       % Inset shows distribution of regression coefficients (i.e. effects of Taxol and SigD on Cep290 length) from a fully Bayesian analysis.
     \end{enumerate}
     \bigskip
     \textbf{\itshape Figure 4. The \textit{onion rings} (\textit{onr}) allele of Exo84 decouples TZ hyperlongation from loss of plasma membrane contacts.}
     \begin{enumerate}[label={(\Alph*)}, nolistsep]
-    \item Cells expressing \sigd{} fail to maintain plasma membrane-cilium tethering despite initially anchoring to the plasma membrane.
-      The plasma membrane is marked with CellMask, a cell impermeable dye.
-    \item \textit{onr} mutants do not maintain plasma membrane-cilium tethering.
     \item Cells mutant for \textit{onr} do not display hyperelongated acetylated tubulin signal at the cilium (white arrowhead).
       Acetylated tubulin marks the axoneme, which colocalizes with the TZ in spermatocytes \citep{pratt2016drosophila}.
-    \item GFP-tagged Exo70 localizes to basal bodies in spermatocytes.
+    \item Cells expressing \sigd{} fail to maintain cilium-PM tethering despite initially anchoring to the PM.
+      The PM is marked with CellMask, a cell impermeable dye.
+    \item \textit{onr} mutants do not maintain PM-cilium tethering.
+    \item GFP-tagged Exo70 localizes to BBs in spermatocytes.
     \end{enumerate}
     
   \end{linenumbers}
