Fix journal abbreviations and incorrect citations manually

--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -32,10 +32,11 @@
 }
 
 @article{xu2016phosphatidylinositol,
-  title={Phosphatidylinositol phosphate kinase PIPKI [gamma] and phosphatase INPP5E coordinate initiation of ciliogenesis},
+  title={Phosphatidylinositol phosphate kinase PIPKI$\gamma$ and phosphatase INPP5E coordinate initiation of ciliogenesis},
   author={Xu, Qingwen and Zhang, Yuxia and Wei, Qing and Huang, Yan and Hu, Jinghua and Ling, Kun},
-  journal={Nature Communications},
+  journal={Nature communications},
   volume={7},
+  pages={10777},
   year={2016},
   publisher={Nature Publishing Group}
 }
@@ -82,14 +83,20 @@
   year={2015},
   publisher={Elsevier}
 }
-
-@article{vieillard2016transition,
-  title={Transition zone assembly and its contribution to axoneme formation in Drosophila male germ cells},
-  author={Vieillard, Jennifer and Paschaki, Marie and Duteyrat, Jean-Luc and Augi{\`e}re, C{\'e}line and Cortier, Elisabeth and Lapart, Jean-Andr{\'e} and Thomas, Jo{\"e}lle and Durand, B{\'e}n{\'e}dicte},
-  journal={J. Cell. Biol.},
-  pages={jcb--201603086},
-  year={2016},
-  publisher={Rockefeller University Press}
+@article {vieillard2016transition,
+	author = {Vieillard, Jennifer and Paschaki, Marie and Duteyrat, Jean-Luc and Augi{\`e}re, C{\'e}line and Cortier, Elisabeth and Lapart, Jean-Andr{\'e} and Thomas, Jo{\"e}lle and Durand, B{\'e}n{\'e}dicte},
+	title = {Transition zone assembly and its contribution to axoneme formation in Drosophila male germ cells},
+	volume = {214},
+	number = {7},
+	pages = {875--889},
+	year = {2016},
+	doi = {10.1083/jcb.201603086},
+	publisher = {Rockefeller University Press},
+	abstract = {The ciliary transition zone (TZ) is a complex structure found at the cilia base. Defects in TZ assembly are associated with human ciliopathies. In most eukaryotes, three protein complexes (CEP290, NPHP, and MKS) cooperate to build the TZ. We show that in Drosophila melanogaster, mild TZ defects are observed in the absence of MKS components. In contrast, Cby and Azi1 cooperate to build the TZ by acting upstream of Cep290 and MKS components. Without Cby and Azi1, centrioles fail to form the TZ, precluding sensory cilia assembly, and no ciliary membrane cap associated with sperm ciliogenesis is made. This ciliary cap is critical to recruit the tubulin-depolymerizing kinesin Klp59D, required for regulation of axonemal growth. Our results show that Drosophila TZ assembly in sensory neurons and male germ cells involves cooperative actions of Cby and Dila. They further reveal that temporal control of membrane cap assembly by TZ components and microtubule elongation by kinesin-13 is required for axoneme formation in male germ cells.},
+	issn = {0021-9525},
+	URL = {http://jcb.rupress.org/content/214/7/875},
+	eprint = {http://jcb.rupress.org/content/214/7/875.full.pdf},
+	journal = {J Cell Biol}
 }
 
 @article{basiri2014migrating,
@@ -106,7 +113,7 @@
 @article{pratt2016drosophila,
   title={Drosophila sensory cilia lacking MKS proteins exhibit striking defects in development but only subtle defects in adults},
   author={Pratt, Metta B and Titlow, Joshua S and Davis, Ilan and Barker, Amy R and Dawe, Helen R and Raff, Jordan W and Roque, Helio},
-  journal={J. Cell. Sci.},
+  journal={J Cell Sci},
   volume={129},
   number={20},
   pages={3732--3743},
@@ -117,7 +124,7 @@
 @article{enjolras2012drosophila,
   title={Drosophila chibby is required for basal body formation and ciliogenesis but not for Wg signaling},
   author={Enjolras, Camille and Thomas, Jo{\"e}lle and Chhin, Brigitte and Cortier, Elisabeth and Duteyrat, Jean-Luc and Soulavie, Fabien and Kernan, Maurice J and Lauren{\c{c}}on, Anne and Durand, B{\'e}n{\'e}dicte},
-  journal={J. Cell. Biol.},
+  journal={J Cell Biol},
   volume={197},
   number={2},
   pages={313--325},
@@ -265,13 +272,20 @@
   publisher={Public Library of Science}
 }
 
-@article{franz2013cp110,
-  title={CP110 exhibits novel regulatory activities during centriole assembly in Drosophila},
-  author={Franz, Anna and Roque, H{\'e}lio and Saurya, Saroj and Dobbelaere, Jeroen and Raff, Jordan W},
-  journal={J. Cell. Biol.},
-  pages={jcb--201305109},
-  year={2013},
-  publisher={Rockefeller University Press}
+@article {franz2013cp110,
+	author = {Franz, Anna and Roque, H{\'e}lio and Saurya, Saroj and Dobbelaere, Jeroen and Raff, Jordan W.},
+	title = {CP110 exhibits novel regulatory activities during centriole assembly in Drosophila},
+	volume = {203},
+	number = {5},
+	pages = {785--799},
+	year = {2013},
+	doi = {10.1083/jcb.201305109},
+	publisher = {Rockefeller University Press},
+	abstract = {CP110 is a conserved centriole protein implicated in the regulation of cell division, centriole duplication, and centriole length and in the suppression of ciliogenesis. Surprisingly, we report that mutant flies lacking CP110 (CP110Δ) were viable and fertile and had no obvious defects in cell division, centriole duplication, or cilia formation. We show that CP110 has at least three functions in flies. First, it subtly influences centriole length by counteracting the centriole-elongating activity of several centriole duplication proteins. Specifically, we report that centrioles are \~{}10\% longer than normal in CP110Δ mutants and \~{}20\% shorter when CP110 is overexpressed. Second, CP110 ensures that the centriolar microtubules do not extend beyond the distal end of the centriole, as some centriolar microtubules can be more than 50 times longer than the centriole in the absence of CP110. Finally, and unexpectedly, CP110 suppresses centriole overduplication induced by the overexpression of centriole duplication proteins. These studies identify novel and surprising functions for CP110 in vivo in flies.},
+	issn = {0021-9525},
+	URL = {http://jcb.rupress.org/content/203/5/785},
+	eprint = {http://jcb.rupress.org/content/203/5/785.full.pdf},
+	journal = {J Cell Biol}
 }
 
 @article{baker2004mechanosensory,
@@ -531,7 +545,7 @@
 @article{saurya2016drosophila,
   title={Drosophila Ana1 is required for centrosome assembly and centriole elongation},
   author={Saurya, Saroj and Roque, H{\'e}lio and Novak, Zsofia A and Wainman, Alan and Aydogan, Mustafa G and Volanakis, Adam and Sieber, Boris and Pinto, David Miguel Susano and Raff, Jordan W},
-  journal={J. Cell. Sci.},
+  journal={J Cell Sci},
   volume={129},
   number={13},
   pages={2514--2525},
@@ -575,7 +589,7 @@
 @article{dyson2017inpp5e,
   title={INPP5E regulates phosphoinositide-dependent cilia transition zone function},
   author={Dyson, Jennifer M and Conduit, Sarah E and Feeney, Sandra J and Hakim, Sandra and DiTommaso, Tia and Fulcher, Alex J and Sriratana, Absorn and Ramm, Georg and Horan, Kristy A and Gurung, Rajendra and others},
-  journal={J. Cell. Biol.},
+  journal={J Cell Biol},
   volume={216},
   number={1},
   pages={247--263},
@@ -663,7 +677,7 @@
 @article{satir2010primary,
   title={The primary cilium at a glance},
   author={Satir, Peter and Pedersen, Lotte B and Christensen, S{\o}ren T},
-  journal={J. Cell. Sci.},
+  journal={J Cell Sci},
   volume={123},
   number={4},
   pages={499--503},
@@ -674,7 +688,7 @@
 @article{bloodgood2010sensory,
   title={Sensory reception is an attribute of both primary cilia and motile cilia},
   author={Bloodgood, Robert A},
-  journal={J. Cell. Sci.},
+  journal={J Cell Sci},
   volume={123},
   number={4},
   pages={505--509},
@@ -696,7 +710,7 @@
 @article{gottardo2013cilium,
   title={The cilium-like region of the Drosophila spermatocyte: an emerging flagellum?},
   author={Gottardo, Marco and Callaini, Giuliano and Riparbelli, Maria Giovanna},
-  journal={J. Cell. Sci.},
+  journal={J Cell Sci},
   volume={126},
   number={23},
   pages={5441--5452},
@@ -718,7 +732,7 @@
 @article{xu2014pipkigamma,
   title={PIPKI$\gamma$ targets to the centrosome and restrains centriole duplication},
   author={Xu, Qingwen and Zhang, Yuxia and Xiong, Xunhao and Huang, Yan and Salisbury, Jeffery L and Hu, Jinghua and Ling, Kun},
-  journal={J. Cell. Sci.},
+  journal={J Cell Sci},
   volume={127},
   number={6},
   pages={1293--1305},
@@ -805,7 +819,7 @@
 @article{serwas2017centrioles,
   title={Centrioles initiate cilia assembly but are dispensable for maturation and maintenance in \textit{C. elegans}},
   author={Serwas, Daniel and Su, Tiffany Y and Roessler, Max and Wang, Shaohe and Dammermann, Alexander},
-  journal={J. Cell. Biol.},
+  journal={J Cell Biol},
   volume={216},
   number={6},
   pages={1659--1671},
@@ -816,7 +830,7 @@
 @article{sengupta2013depletion,
   title={Depletion of PtdIns (4, 5) P2 underlies retinal degeneration in Drosophila trp mutants},
   author={Sengupta, Sukanya and Barber, Thomas R and Xia, Hongai and Ready, Donald F and Hardie, Roger C},
-  journal={J. Cell. Sci.},
+  journal={J Cell Sci},
   volume={126},
   number={5},
   pages={1247--1259},
@@ -1090,7 +1104,7 @@
 @article{chang2016cep295,
   title={CEP295 interacts with microtubules and is required for centriole elongation},
   author={Chang, Ching-Wen and Hsu, Wen-Bin and Tsai, Jhih-Jie and Tang, Chieh-Ju C and Tang, Tang K},
-  journal={J. Cell. Sci.},
+  journal={J Cell Sci},
   volume={129},
   number={13},
   pages={2501--2513},
